# boilerplate-python-mcp-server

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/cmd/: run_server.sh
{{cookiecutter.project_slug}}/tests/: test_main.py  test_stdio.py  test_streamable_http.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  entrypoint.py  server.py
